feat: style main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header>
   <h1>Hero Feed</h1>
 </header>
-<cdk-virtual-scroll-viewport>
+<section>
+  <cdk-virtual-scroll-viewport>
 
-</cdk-virtual-scroll-viewport>
+  </cdk-virtual-scroll-viewport>
+</section>
