feat: implement data generator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,6 @@
   <h1>Hero Feed</h1>
 </header>
 <section>
-  <cdk-virtual-scroll-viewport>
-
+  <cdk-virtual-scroll-viewport itemSize="50">
   </cdk-virtual-scroll-viewport>
 </section>
