feat: add hero-message component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <h1>Hero Feed</h1>
 </header>
 <section>
+  <!-- <app-hero-message *ngFor=""></app-hero-message> -->
   <cdk-virtual-scroll-viewport itemSize="50">
   </cdk-virtual-scroll-viewport>
 </section>
