--- a/src/app/hero-message/hero-message.component.html
+++ b/src/app/hero-message/hero-message.component.html
@@ -1,1 +1,11 @@
-<p>hero-message works!</p>
+<div class="sidebar">
+  <div class="sidebar">{{ initials }}</div>
+</div>
+<div class="content">
+  <p class="name">{{ message.name }}</p>
+  <p class="date">{{ message.date | date: 'dd MMM yyyy' }}</p>
+  <p class="message">{{ message.message }}</p>
+  <div *ngIf="message.tags.length" class="tags">
+    <span *ngFor="let t of message.tags" class="tag">{{ t }}</span>
+  </div>
+</div>
