--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
   <h1>Hero Feed</h1>
 </header>
 <section>
-  <!-- <app-hero-message *ngFor=""></app-hero-message> -->
-  <cdk-virtual-scroll-viewport itemSize="50">
-  </cdk-virtual-scroll-viewport>
+  <app-hero-message
+    *ngFor="let msg of heroMsgs.messages$ | async"
+    [message]="msg"
+  ></app-hero-message>
+  <cdk-virtual-scroll-viewport itemSize="50"> </cdk-virtual-scroll-viewport>
 </section>
