--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,14 @@
   <h1>Hero Feed</h1>
 </header>
 <section class="viewport" cdkVirtualScrollingElement>
-  <cdk-virtual-scroll-viewport appHeroMessageVirtualScroll>
+  <app-hero-message
+    *ngFor="let msg of heroMsgs.messages$ | async"
+    [message]="msg"
+  ></app-hero-message>
+  <!-- <cdk-virtual-scroll-viewport appHeroMessageVirtualScroll>
     <app-hero-message
       *cdkVirtualFor="let msg of heroMsgs.messages$ | async"
       [message]="msg"
     ></app-hero-message>
-  </cdk-virtual-scroll-viewport>
+  </cdk-virtual-scroll-viewport> -->
 </section>
