--- a/src/app/hero-message/hero-message.component.scss
+++ b/src/app/hero-message/hero-message.component.scss
@@ -3,6 +3,7 @@
   font-size: 14px;
   padding: 24px;
   border-bottom: 1px solid #e2e2e2;
+  box-sizing: border-box;
 
   .sidebar {
     margin-right: 16px;
