--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <header>
   <h1>Hero Feed</h1>
+  <p class="count">Count: {{ (heroMsgs.messages$ | async)!.length }}</p>
 </header>
 <section class="viewport" cdkVirtualScrollingElement>
-  <app-hero-message
-    *ngFor="let msg of heroMsgs.messages$ | async"
-    [message]="msg"
-  ></app-hero-message>
-  <!-- <cdk-virtual-scroll-viewport appHeroMessageVirtualScroll>
+  <cdk-virtual-scroll-viewport
+    appHeroMessageVirtualScroll
+    [messages]="heroMsgs.messages$ | async"
+  >
     <app-hero-message
       *cdkVirtualFor="let msg of heroMsgs.messages$ | async"
       [message]="msg"
+      [attr.data-hm-id]="msg.id"
     ></app-hero-message>
-  </cdk-virtual-scroll-viewport> -->
+  </cdk-virtual-scroll-viewport>
 </section>
