--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,9 @@ header {
   padding: 20px;
   box-sizing: border-box;
   height: $headerHeight;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   h1 {
     font-size: 24px;
